[gd_scene load_steps=3 format=3 uid="uid://ficxtf4vno84"]

[ext_resource type="Script" path="res://Scripts/player_box.gd" id="1_6j8cv"]
[ext_resource type="FontFile" uid="uid://dr4rsvqy8246x" path="res://assets/fonts/PixelifySans.ttf" id="1_hsvhv"]

[node name="PlayerBox" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_right = 1.0
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource("1_6j8cv")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(256, 0)
layout_mode = 0
offset_right = 256.0
offset_bottom = 108.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="PlayerContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="NomeJogador" type="RichTextLabel" parent="PanelContainer/MarginContainer/PlayerContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_hsvhv")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Jogador: "
fit_content = true

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/PlayerContainer"]
layout_direction = 2
layout_mode = 2

[node name="Raça" type="RichTextLabel" parent="PanelContainer/MarginContainer/PlayerContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("1_hsvhv")
theme_override_font_sizes/normal_font_size = 17
bbcode_enabled = true
text = "Raça:
"
fit_content = true

[node name="Classe" type="RichTextLabel" parent="PanelContainer/MarginContainer/PlayerContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("1_hsvhv")
theme_override_font_sizes/normal_font_size = 17
bbcode_enabled = true
text = "Classe:"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/PlayerContainer"]
layout_direction = 2
layout_mode = 2

[node name="NivelText" type="RichTextLabel" parent="PanelContainer/MarginContainer/PlayerContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("1_hsvhv")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "Nível:"
fit_content = true

[node name="ForçaText" type="RichTextLabel" parent="PanelContainer/MarginContainer/PlayerContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("1_hsvhv")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "Força:"
fit_content = true
